k8s/template/default-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: $namespace-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "flask-admin.kkkk.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $namespace-vs
spec:
  hosts:
  - "flask-admin.kkkk.com"
  gateways:
  - $namespace-gateway
  http:
  - route:
    - destination:
        host: flask-admin
        port:
          number: $port
