k8s/template/demo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-tutorial-vs
spec:
  hosts:
  - flask-tutorial
  http:
  - route:
    - destination:
        host: flask-tutorial
        subset: v1
